--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.3.0",
-    "koa-router": "^7.2.1"
+    "koa-router": "^7.2.1",
+    "mime": "^1.3.6",
+    "mz": "^2.6.0",
+    "nunjucks": "^3.0.1",
+    "path": "^0.12.7"
   }
 }
