--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "koa": "^2.3.0",
     "koa-router": "^7.2.1",
     "mime": "^1.3.6",
+    "mysql": "^2.13.0",
     "mz": "^2.6.0",
+    "node-uuid": "^1.4.8",
     "nunjucks": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sequelize": "^3.30.4"
   }
 }
