--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node app.js"
   },
   "keywords": [],
@@ -20,5 +20,8 @@
     "nunjucks": "^3.0.1",
     "path": "^0.12.7",
     "sequelize": "^3.30.4"
+  },
+  "devDependencies": {
+    "mocha": "^3.4.2"
   }
 }
